tests/parse_print/random_perturb/set01/delete-02/stderr.expected
Error:
    tests/parse_print/random_perturb/set01/delete-02/delete-02.essence:3:14:
Unsupported attributes for set: siz
Only these are supported: size, minSize, maxSize
    find x : set (siz 2) of int(1..3)
                 ^